apps/argocd/base/argocd-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
  name: argocd-route
  namespace: argocd
spec:
  hostnames:
  - argocd.lokal
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: argocd-server
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
