apps/argocd/base/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  # tls:
  # - hosts:
  #   - argocd.lokal
  #   secretName: argocd-tls
  rules:
  - host: argocd.lokal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server-ip
            port:
              name: argocd-http
